Remove unavailable spring-boot-starter-restclient dependency